- Added Projects Page - Fixed some lines going outside viewport on mobile - Fixed alignments of header on mobile phones

--- a/src/style.css
+++ b/src/style.css
@@ -133,14 +133,13 @@
     width: 100px;
     padding: 20px;
   }
-}
-
-@media only screen and (max-width: 420px) {
-  .header ul{
-    margin-left: -30px;
-  }
   .run-code-text
   {
     display: none;
   }
+  .header ul{
+    margin-left: -20px;
+  }
 }
+
+
